# tictactoe

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  board.cpp  main.cpp  tictactoe.cpp
src/inc/: board.h  main.h  tictactoe.h
tests/: CMakeLists.txt  basic_test.py  test_3x3_PvP.py
